--- a/src/app/components/main-graph/main-graph.component.html
+++ b/src/app/components/main-graph/main-graph.component.html
@@ -46,7 +46,7 @@
        href="https://www.uni-augsburg.de/de/fakultaet/fai/informatik/prof/misit/"
        target="_blank">
       <img [ngStyle]="{'width.px': 60}"
-           src="assets/unicorn.png">
+           src="../../../assets/img/unicorn.png">
     </a>
   </span>
 
